--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -20,15 +20,17 @@
 </head>
 
 <body>
-
-        <!-- Navigation   -->
+    <!-- Navigation   -->
         <nav th:insert="/fragments.html :: topnav"></nav>
     <!-- Navigation end   -->
-
 
      <!--Form-->
      <form th:action="@{/savePost}" method="post" th:object="${postDTO}" enctype="multipart/form-data">
         <h2>create a blog post</h2>
+
+         <div class="alert alert-danger" th:if="${error}" role="alert">
+             <span th:text="${errorMessage}"></span>
+         </div>
 
          <div class="col-12">
              <label for="formFile" class="form-label">Cover Image</label>
@@ -36,9 +38,11 @@
          </div>
 
          <label for="text"></label>
+         <span class="alert alert-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
         <input type="text" name="text" id="text" th:field="*{title}" placeholder="Title">
 
          <label for="message"></label>
+         <span class="alert alert-danger" th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></span>
         <textarea name="message" id="message" th:field="*{content}" cols="30" rows="10" placeholder="Post content here...">
 
         </textarea>
